--- a/01_blog-preview-card-main/index.html
+++ b/01_blog-preview-card-main/index.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Preview Card Main</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div class="card">
+        <img src="assets/images/illustration-article.svg" alt="">
+
+        <p><span class="learning">Learning</span></p>
+        <p>Published 10 Jan 2024</p>
+
+
+        <h2>HTML & CSS foundations</h2>
+
+        <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
+
+        <img src="assets/images/image-avatar.webp" alt="">
+        <p>Greg Hooper</p>
+    </div>
     
 </body>
 </html>
