--- a/01_blog-preview-card-main/index.html
+++ b/01_blog-preview-card-main/index.html
@@ -8,18 +8,18 @@
 </head>
 <body>
     <div class="card">
-        <img src="assets/images/illustration-article.svg" alt="">
+        <img class="img-article" src="assets/images/illustration-article.svg" alt="">
 
         <p><span class="learning">Learning</span></p>
-        <p>Published 10 Jan 2024</p>
+        <p class="date-published">Published 10 Jan 2024</p>
 
 
         <h2>HTML & CSS foundations</h2>
 
-        <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
+        <p class="main-text">These languages are the backbone of every website, defining structure, content, and presentation.</p>
 
-        <img src="assets/images/image-avatar.webp" alt="">
-        <p>Greg Hooper</p>
+        <img class="img-avatar" src="assets/images/image-avatar.webp" alt="">
+        <p class="greg">Greg Hooper</p>
     </div>
     
 </body>
