02-Criacao da estrutura HTML

--- a/02_order-summary-component-main/index.html
+++ b/02_order-summary-component-main/index.html
@@ -7,6 +7,25 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <img src="images/illustration-hero.svg" alt="">
+
+        <h2>Order Summary</h2>
+        <p>You can now listen to millions of songs, audiobooks,
+         and podcasts on any device anywhere you like!</p>
+
+         <div class="annual-plan">
+            <img src="images/icon-music.svg" alt="">
+
+            <p>Annual Plan</p>
+            <p>$59.99/Year</p>
+            <p>Change</p>
+         </div>
+
+         <button>Proceed to Payment</button>
+
+         <p>Cancel Order</p>
+
+    </div>
 </body>
 </html>
