--- a/02_order-summary-component-main/index.html
+++ b/02_order-summary-component-main/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="images/illustration-hero.svg" alt="">
+        <img src="images/illustration-hero.svg" alt="" class="img-hero">
 
         <h2>Order Summary</h2>
         <p>You can now listen to millions of songs, audiobooks,
