--- a/02_order-summary-component-main/index.html
+++ b/02_order-summary-component-main/index.html
@@ -10,9 +10,11 @@
     <div class="container">
         <img src="images/illustration-hero.svg" alt="" class="img-hero">
 
-        <h2>Order Summary</h2>
-        <p>You can now listen to millions of songs, audiobooks,
-         and podcasts on any device anywhere you like!</p>
+        <div class="order-summary">
+            <h1>Order Summary</h1>
+            <p>You can now listen to millions of songs, audiobooks,
+            and podcasts on any device anywhere you like!</p>
+        </div>
 
          <div class="annual-plan">
             <img src="images/icon-music.svg" alt="">
@@ -25,6 +27,7 @@
          <button>Proceed to Payment</button>
 
          <p>Cancel Order</p>
+
 
     </div>
 </body>
